[package]
name = "park"
version = "0.1.4"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
edition = "2021"

[dependencies]
ansi_term = "=0.12.1"
clap = { version = "=3.2.5", default-features = false, features = ["derive", "std", "suggestions"] }
serde = { version = "=1.0.133", features = ["derive"] }
tabwriter = { version = "=1.2.1", features = ["ansi_formatting"] }
thiserror = "=1.0.26"
toml = "=0.5.8"

[dev-dependencies]
indoc = "=1.0.3"
pretty_assertions = "=0.7.2"

[build-dependencies]
clap = { version = "=3.2.5", default-features = false, features = ["derive", "std", "suggestions"] }
clap_complete = "=3.2.3"
