[package]
name = "park"
version = "0.1.4"
authors = ["Gabriel Sanches <gabriel@gsr.dev>"]
edition = "2021"
description = "Configuration-based dotfiles manager"

[workspace]
members = ["wrkspc/park-cli"]

[dependencies]
ansi_term = "=0.12.1"
park_cli = { path = "wrkspc/park-cli" }
serde = { version = "=1.0.133", features = ["derive"] }
tabwriter = { version = "=1.2.1", features = ["ansi_formatting"] }
thiserror = "=1.0.26"
toml = "=0.5.8"

[dev-dependencies]
indoc = "=1.0.3"
pretty_assertions = "=0.7.2"

[build-dependencies]
clap_complete = "=4.0.6"
clap_mangen = "=0.2.5"
park_cli = { path = "wrkspc/park-cli" }
